--- a/ca644_alpine/config.json
+++ b/ca644_alpine/config.json
@@ -5,17 +5,13 @@
 		"arch": "amd64"
 	},
 	"process": {
-		"terminal": true,
-		"consoleSize": {
-			"height": 0,
-			"width": 0
-		},
+		"terminal": false,
 		"user": {
 			"uid": 0,
 			"gid": 0
 		},
 		"args": [
-			"sh"
+			"sleep", "300"
 		],
 		"env": [
 			"PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
